# 24205-Trusov-ECM

./: .gitignore
lab-1/: .~lock.отчет.docx#  buildnrun.sh  buildnrunfewtimes.sh  main.c  report-lab1.docx  отчет lab1.docx  отчет.docx
lab-1/BubbleSort/: BubbleSort  CMakeLists.txt  buildnrun.sh  main.cpp
lab-2/: buildnrun.sh  report-lab2.docx  отчет lab1.docx
lab-3/: main.c  main.s
lab-5/: CMakeLists.txt  EffectManager.cpp  EffectManager.h  ImageEffect.cpp  ImageEffect.h  ImageInterface.cpp  ImageInterface.h  build.sh  main.cpp
lab-6/: main.cpp
lab-7/: BlasVec.c  HandVec.c  NoVec.c  out  tester.sh  time
lab-8/: main.cpp  out.csv
lab-9/: main.cpp  out.csv
